# toolframeworkcore

./: BStore_8h_source.html  BinaryStream_8h_source.html  CMakeLists.txt  DataModelBase_8h_source.html  DataModel_8h_source.html  Dockerfile  Dockerfile.base  Doxyfile  DummyTool_8h_source.html  Factory_8h_source.html  JobDeque_8h_source.html  JobQueue_8h_source.html  Job_8h_source.html  Json_8h_source.html  Logging_8h_source.html  Makefile  MyToolDynamicMultiThread_8h_source.html  MyToolMultiThread_8h_source.html  MyToolThread_8h_source.html  MyTool_8h_source.html  PointerWrapper_8h_source.html  README.md  SerialisableObject_8h_source.html  Store_8h_source.html  ToolChain_8h_source.html  Tool_8h_source.html  Unity_8h_source.html  Utilities_8h_source.html  WorkerPoolManager_8h_source.html  annotated.html  classBStore-members.html  classBStore.html  classBinaryStream-members.html  classBinaryStream.html  classDataModel-members.html  classDataModel.html  classDummyTool-members.html  classDummyTool.html  classLogging-members.html  classLogging.html  (+113 more)
Application/: CMakeLists.txt  Makefile  Makefile.new  Setup.sh
DataModel/: DataModel.cpp  DataModel.h  Utilities.h
UnitTests/: Makefile  StoreTest.cpp
docs/: BStore_8h_source.html  BinaryStream_8h_source.html  DataModel_2DataModel_8h_source.html  DataModel_2Utilities_8h_source.html  DataModel_8h_source.html  DummyTool_8h_source.html  Factory_8h_source.html  Logging_8h_source.html  MyToolDynamicMultiThread_8h_source.html  MyToolMultiThread_8h_source.html  MyToolThread_8h_source.html  MyTool_8h_source.html  PointerWrapper_8h_source.html  SerialisableObject_8h_source.html  Store_8h_source.html  ToolChain_8h_source.html  Tool_8h_source.html  Unity_8h_source.html  UserTools_2DummyTool_2DummyTool_8h_source.html  UserTools_2template_2MyToolDynamicMultiThread_8h_source.html  UserTools_2template_2MyToolMultiThread_8h_source.html  UserTools_2template_2MyToolThread_8h_source.html  UserTools_2template_2MyTool_8h_source.html  Utilities_8h_source.html  annotated.html  classBStore-members.html  (+161 more)
(+305 files in other folders)
